# express-core

./: BUILD.gn  README.md  brave_paks.gni  brave_repack_locales.gni  package-lock.json  package.json
android/: BUILD.gn  android_browser_tests.gni  brave_java_resources.gni  brave_java_sources.gni  brave_xml_preprocessor.gni
android/browsertests_apk/: AndroidManifest.xml.jinja2
android/features/tab_ui/: brave_tab_management_java_sources.gni
android/feed/: brave_feed_java_sources.gni
android/java/: AndroidManifest.xml
android/java/res/anim/: bounce_down.xml  bounce_up.xml
android/java/res/drawable/: activity_feed.xml  border_bg.xml  browser_express_profile_layout_bg.xml  btn_downvote.xml  btn_upvote.xml  circular_background.xml  edit_profile.xml  maximize.xml  modern_toolbar_background_grey_middle_segment.xml  notifications.xml  orange_rounded_bg.xml  send.xml  settings.xml
android/java/res/layout/: bottom_toolbar_browsing.xml  brave_bookmark_toolbar.xml  brave_toolbar.xml  browser_express_comment.xml  browser_express_comments_settings.xml  browser_express_login_settings.xml  browser_express_otp_verify_settings.xml  browser_express_post.xml  browser_express_profile_settings.xml  browser_express_signup_settings.xml  (+11 more)
android/preprocess/xml/: menu_main_menu_xml.py
browser/: BUILD.gn  brave_tab_helpers.cc  sources.gni
browser/android/: BUILD.gn
browser/android/preferences/: BUILD.gn
browser/autocomplete/: sources.gni
browser/autoplay/: BUILD.gn
browser/brave_adaptive_captcha/: sources.gni
browser/brave_ads/: sources.gni
browser/brave_ads/android/: BUILD.gn
browser/brave_ads/device_id/: BUILD.gn
browser/brave_ads/services/: BUILD.gn
browser/brave_ads/tooltips/: BUILD.gn
browser/brave_federated/: BUILD.gn
browser/brave_news/: BUILD.gn  sources.gni
browser/brave_referrals/: sources.gni
browser/brave_rewards/: BUILD.gn  sources.gni
browser/brave_rewards/test/: BUILD.gn
browser/brave_shields/: sources.gni
browser/brave_stats/: sources.gni
browser/brave_vpn/: sources.gni
browser/brave_vpn/dns/: BUILD.gn
browser/brave_vpn/win/: BUILD.gn
browser/brave_wallet/: BUILD.gn  brave_wallet_service_unittest.cc  ethereum_provider_impl_unittest.cc  solana_provider_impl_unittest.cc
browser/brave_wallet/android/: sources.gni
browser/brave_wallet/notifications/: sources.gni
browser/browsing_data/: BUILD.gn  sources.gni
browser/component_updater/: BUILD.gn
browser/debounce/: sources.gni
browser/decentralized_dns/test/: BUILD.gn
browser/download/: sources.gni
browser/ephemeral_storage/: BUILD.gn  sources.gni
browser/ethereum_remote_client/: BUILD.gn
browser/ethereum_remote_client/buildflags/: BUILD.gn
browser/extensions/: BUILD.gn  resources.gni
browser/extensions/api/: brave_extensions_api_client_unittest.cc
browser/farbling/: BUILD.gn
browser/flags/: brave_flags_java_sources.gni
browser/gcm_driver/: BUILD.gn
browser/greaselion/: sources.gni
browser/importer/: BUILD.gn  sources.gni
browser/incognito/android/: java_sources.gni
browser/infobars/: sources.gni
browser/ipfs/: content_browser_client_helper_unittest.cc  ipfs_tab_helper_browsertest.cc  sources.gni
browser/ipfs/test/: BUILD.gn
browser/metrics/: BUILD.gn
browser/misc_metrics/: BUILD.gn  sources.gni
browser/net/: BUILD.gn  brave_ad_block_tp_network_delegate_helper_unittest.cc  brave_ads_status_header_network_delegate_helper_unittest.cc  brave_block_safebrowsing_urls_unittest.cc  brave_network_audit_allowed_lists.h  brave_network_audit_browsertest.cc  brave_site_hacks_network_delegate_helper_unittest.cc  decentralized_dns_network_delegate_helper_unittest.cc
browser/new_tab/: BUILD.gn  sources.gni
browser/notifications/: sources.gni
browser/notifications/android/: BUILD.gn
browser/ntp_background/: sources.gni
browser/ntp_background_images/: sources.gni
browser/perf/: sources.gni
browser/permissions/: BUILD.gn  permission_lifetime_manager_unittest.cc  sources.gni
browser/playlist/: sources.gni
browser/playlist/test/: BUILD.gn
browser/preferences/: brave_preferences_java_sources.gni
browser/profiles/: BUILD.gn  brave_bookmark_model_loaded_observer_browsertest.cc
browser/renderer_context_menu/test/: BUILD.gn  render_view_context_menu_unittest.cc
browser/request_otr/: BUILD.gn  sources.gni
browser/resources/bookmarks/: sources.gni
browser/resources/downloads/: sources.gni
browser/resources/extensions/: sources.gni
browser/resources/history/: sources.gni
browser/resources/password_manager/: sources.gni
browser/resources/settings/: BUILD.gn  settings.gni  sources.gni
browser/search/: BUILD.gn
browser/search_engines/: search_engine_provider_util.cc  sources.gni
browser/share/android/: java_sources.gni
browser/sharing_hub/: brave_sharing_hub_browsertest.cc
browser/skus/: sources.gni
browser/speedreader/: sources.gni
browser/sync/: sources.gni
browser/tab_group/: BUILD.gn
browser/test/: BUILD.gn
browser/themes/: BUILD.gn  sources.gni
browser/tor/: BUILD.gn  brave_tor_browsertest.cc  onion_location_navigation_throttle_browsertest.cc
browser/ui/: BUILD.gn  brave_shields_data_controller_unittest.cc
browser/ui/bookmark/: BUILD.gn
browser/ui/brave_rewards/: BUILD.gn
browser/ui/color/: BUILD.gn  sources.gni
browser/ui/commander/: BUILD.gn
browser/ui/commands/: BUILD.gn
browser/ui/sidebar/: BUILD.gn  sidebar_unittest.cc
browser/ui/tabs/: BUILD.gn
browser/ui/toolbar/: BUILD.gn
browser/ui/webui/: brave_welcome_ui.cc  playlist_ui.cc  sources.gni
browser/ui/whats_new/: BUILD.gn  whats_new_browsertest.cc  whats_new_util.cc
browser/url_sanitizer/: sources.gni
browser/web_discovery/: BUILD.gn  sources.gni
browser/widevine/: BUILD.gn
common/: BUILD.gn  sources.gni
common/extensions/api/: BUILD.gn  _api_features.json
renderer/: BUILD.gn  sources.gni
renderer/brave_wallet/: BUILD.gn
renderer/skus/: BUILD.gn
renderer/test/: BUILD.gn  js_ethereum_provider_browsertest.cc
utility/: BUILD.gn  sources.gni
utility/importer/: chrome_importer_unittest.cc  sources.gni
(+713 files in other folders)
