# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

# Tests that do not run on Android
android_test_exception_sources = [
  "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_mock.cc",
  "//express/browser/brave_ads/application_state/notification_helper/notification_helper_impl_mock.h",
  "//express/browser/brave_ads/units/search_result_ad/search_result_ad_browsertest.cc",
  "//express/browser/brave_content_browser_client_browsertest.cc",
  "//express/browser/brave_scheme_load_browsertest.cc",
  "//express/browser/brave_search/brave_search_browsertest.cc",
  "//express/browser/brave_shields/ad_block_service_browsertest.cc",
  "//express/browser/brave_shields/ad_block_service_browsertest.h",
  "//express/browser/brave_shields/brave_shields_web_contents_observer_browsertest.cc",
  "//express/browser/brave_shields/cookie_expiry_browsertest.cc",
  "//express/browser/brave_shields/domain_block_page_browsertest.cc",
  "//express/browser/brave_shields/eventsource_pool_limit_browsertest.cc",
  "//express/browser/brave_shields/websockets_pool_limit_browsertest.cc",
  "//express/browser/brave_wallet/brave_wallet_ethereum_chain_browsertest.cc",
  "//express/browser/brave_wallet/brave_wallet_event_emitter_browsertest.cc",
  "//express/browser/brave_wallet/brave_wallet_service_browsertest.cc",
  "//express/browser/brave_wallet/brave_wallet_sign_message_browsertest.cc",
  "//express/browser/brave_wallet/brave_wallet_tab_helper_browsertest.cc",
  "//express/browser/brave_wallet/ethereum_provider_browsertest.cc",
  "//express/browser/brave_wallet/send_or_sign_transaction_browsertest.cc",
  "//express/browser/brave_wallet/solana_provider_browsertest.cc",
  "//express/browser/brave_wallet/solana_provider_renderer_browsertest.cc",
  "//express/browser/brave_wallet/wallet_watch_asset_browsertest.cc",
  "//express/browser/content_settings/brave_content_settings_browsertest.cc",
  "//express/browser/debounce/debounce_browsertest.cc",
  "//express/browser/extensions/api/brave_theme_api_browsertest.cc",
  "//express/browser/extensions/brave_base_local_data_files_browsertest.cc",
  "//express/browser/extensions/brave_base_local_data_files_browsertest.h",
  "//express/browser/extensions/brave_crx_generation_browsertest.cc",
  "//express/browser/extensions/brave_extension_functional_test.cc",
  "//express/browser/extensions/brave_extension_functional_test.h",
  "//express/browser/extensions/brave_extension_provider_browsertest.cc",
  "//express/browser/extensions/brave_theme_event_router_browsertest.cc",
  "//express/browser/extensions/extension_urls_browsertest.cc",
  "//express/browser/favicon/favicon_database_browsertest.cc",
  "//express/browser/perf/brave_perf_features_processor_browsertest.cc",
  "//express/browser/policy/brave_policy_browsertest.cc",
  "//express/browser/profiles/brave_bookmark_model_loaded_observer_browsertest.cc",
  "//express/browser/renderer_context_menu/brave_mock_render_view_context_menu.cc",
  "//express/browser/renderer_context_menu/brave_mock_render_view_context_menu.h",
  "//express/browser/renderer_context_menu/brave_spelling_menu_observer_browsertest.cc",
  "//express/browser/search_engines/search_engine_provider_service_browsertest.cc",
  "//express/browser/search_engines/search_engine_tracker_browsertest.cc",
  "//express/browser/speedreader/speedreader_browsertest.cc",
  "//express/browser/themes/brave_dark_mode_prefs_migration_browsertest.cc",
  "//express/browser/themes/brave_theme_service_browsertest.cc",
  "//express/browser/translate/brave_translate_browsertest.cc",
  "//express/browser/ui/bookmark/bookmark_tab_helper_browsertest.cc",
  "//express/browser/ui/brave_browser_command_controller_browsertest.cc",
  "//express/browser/ui/content_settings/brave_autoplay_blocked_image_model_browsertest.cc",
  "//express/browser/ui/toolbar/brave_app_menu_model_browsertest.cc",
  "//express/browser/ui/webui/brave_wallet/wallet_panel_ui_browsertest.cc",
  "//express/browser/ui/webui/new_tab_page/brave_new_tab_ui_browsertest.cc",
  "//express/browser/ui/webui/private_new_tab_page/brave_private_new_tab_page_browsertest.cc",
  "//express/browser/ui/webui/welcome_page/brave_welcome_ui_browsertest.cc",
  "//express/browser/web_package/signed_exchange_request_browsertest.cc",
  "//express/chromium_src/chrome/browser/safe_browsing/download_protection/check_client_download_request_base_browsertest.cc",
  "//express/chromium_src/chrome/browser/ui/hats/hats_service_browsertest.cc",
  "//express/chromium_src/chrome/browser/ui/views/location_bar/location_bar_view_browsertest.cc",
  "//express/chromium_src/chrome/browser/ui/views/tabs/tab_hover_card_bubble_view_browsertest.cc",
  "//express/components/brave_perf_predictor/browser/perf_predictor_tab_helper_browsertest.cc",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_context_helper.cc",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_context_helper.h",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_context_util.cc",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_context_util.h",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_contribution.cc",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_contribution.h",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_network_util.cc",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_network_util.h",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_promotion.cc",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_promotion.h",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_response.cc",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_response.h",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_util.cc",
  "//express/components/brave_rewards/browser/test/common/rewards_browsertest_util.h",
  "//express/components/brave_rewards/browser/test/rewards_browsertest.cc",
  "//express/components/brave_rewards/browser/test/rewards_contribution_browsertest.cc",
  "//express/components/brave_rewards/browser/test/rewards_flag_browsertest.cc",
  "//express/components/brave_rewards/browser/test/rewards_notification_browsertest.cc",
  "//express/components/brave_rewards/browser/test/rewards_p3a_browsertest.cc",
  "//express/components/brave_rewards/browser/test/rewards_promotion_browsertest.cc",
  "//express/components/brave_rewards/browser/test/rewards_publisher_browsertest.cc",
  "//express/components/brave_rewards/browser/test/rewards_state_browsertest.cc",
  "//express/components/brave_shields/browser/https_everywhere_service_browsertest.cc",
  "//express/components/brave_shields/browser/test_filters_provider.cc",
  "//express/components/content_settings/renderer/brave_content_settings_agent_impl_browsertest.cc",
  "//express/third_party/blink/renderer/modules/brave/navigator_browsertest.cc",
  "//chrome/browser/extensions/browsertest_util.cc",
  "//chrome/browser/extensions/browsertest_util.h",
  "//chrome/browser/extensions/extension_browsertest.cc",
  "//chrome/browser/extensions/extension_browsertest.h",
  "//chrome/browser/media/media_browsertest.cc",
  "//chrome/browser/media/media_browsertest.h",
  "//chrome/browser/ui/test/test_browser_dialog.cc",
  "//chrome/browser/ui/test/test_browser_dialog.h",
  "//chrome/browser/ui/test/test_browser_ui.cc",
  "//chrome/browser/ui/test/test_browser_ui.h",
]

android_test_exception_deps = [
  "//express/browser/autoplay:browser_tests",
  "//express/browser/brave_news:browser_tests",
  "//express/browser/brave_rewards/test:browser_tests",
  "//express/browser/browsing_data:browser_tests",
  "//express/browser/decentralized_dns/test:browser_tests",
  "//express/browser/extensions",
  "//express/browser/farbling:browser_tests",
  "//express/browser/net:browser_tests",
  "//express/browser/permissions:browser_tests",
  "//express/browser/playlist/test:browser_tests",
  "//express/browser/test:browser_tests",
  "//express/browser/ui:browser_tests",
  "//express/browser/ui/tabs/test:browser_tests",
  "//express/browser/ui/views/tabs:browser_tests",
  "//express/components/brave_wallet/resources:ethereum_provider_generated_resources",
  "//express/components/de_amp/browser/test:browser_tests",
  "//express/renderer/skus:browser_tests",
  "//express/renderer/test:browser_tests",
  "//chrome/browser/web_applications",
  "//chrome/test:test_support_ui",
  "//extensions/browser:test_support",
  "//extensions/common:common_constants",
  "//extensions/common:test_support",
  "//ui/views",
]

# Tests that run only on Android
android_only_test_sources = [
  "//express/components/brave_wallet/browser/android_page_appearing_browsertest.cc",
  "//chrome/test/android/browsertests_apk/android_browsertests_jni_onload.cc",
  "//chrome/test/base/android/android_browser_test_browsertest_android.cc",
]

android_only_test_deps = [
  ":test_support",
  "//android_webview/common",
  "//express/browser/partnercustomizations:delegate_public_impl_java",
  "//express/components/brave_wallet/browser:test_support",
  "//express/components/cosmetic_filters/browser:browser",
  "//chrome:chrome_android_core",
  "//chrome/android:app_hooks_java",
  "//chrome/android:delegate_public_impl_java",
  "//chrome/browser/flags:flags_android",
  "//chrome/browser/lens:delegate_public_impl_java",
  "//chrome/browser/locale:delegate_public_impl_java",
  "//chrome/browser/metrics:test_support",
  "//chrome/test:android_browsertests_assets",
  "//chrome/test:android_browsertests_java",
  "//chrome/test:browser_tests_runner",
  "//chrome/test:test_support",
  "//chrome/test:test_support_ui_android",
  "//components/browser_ui/widget/android:java",
  "//components/externalauth/android:google_delegate_public_impl_java",
  "//components/language/android:ulp_delegate_public_java",

  # TODO(crbug.com/961849): This is needed for ShellManager which is what
  # the ChromeBrowserTestsActivity is using to build the java UI. It's
  # likely we want to replace it with something new that uses ChromeWindow
  # and CompositorViewHolder instead.
  "//content/shell:content_shell_lib",
  "//content/test:android_test_message_pump_support",
  "//testing/android/native_test:native_test_support",
]
