# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//extensions/buildflags/buildflags.gni")

brave_chrome_common_sources = [
  "//express/common/brave_channel_info.cc",
  "//express/common/brave_channel_info.h",
  "//express/common/resource_bundle_helper.cc",
  "//express/common/resource_bundle_helper.h",
]

brave_chrome_common_deps = [
  "//base",
  "//express/common:mojo_bindings",
  "//express/extensions:common",
  "//components/version_info:channel",
  "//extensions/buildflags",
  "//services/service_manager",
  "//ui/base",
]

brave_chrome_common_public_deps = [ "//express/components/constants" ]

if (is_android) {
  brave_chrome_common_sources += [
    "//chrome/common/importer/imported_bookmark_entry.cc",
    "//chrome/common/importer/imported_bookmark_entry.h",
  ]
}

if (!is_android && !is_ios) {
  brave_chrome_common_deps += [ "//express/common/importer" ]
}

if (enable_extensions) {
  brave_chrome_common_sources += [
    "//express/common/extensions/brave_extensions_api_provider.cc",
    "//express/common/extensions/brave_extensions_api_provider.h",
    "//express/common/extensions/brave_extensions_client.cc",
    "//express/common/extensions/brave_extensions_client.h",
  ]

  brave_chrome_common_deps += [
    "//express/components/brave_component_updater/browser",
    "//express/components/https_upgrade_exceptions/browser",
    "//components/component_updater",
    "//extensions/common:common_constants",
  ]

  brave_chrome_common_public_deps += [ "extensions/api" ]
}

if (!is_ios) {
  brave_chrome_common_sources += [
    "//express/common/brave_content_client.cc",
    "//express/common/brave_content_client.h",
  ]

  brave_chrome_common_deps += [
    "//express/components/resources",
    "//express/components/resources:static_resources_grit",
    "//chrome/common:channel_info",
    "//chrome/common:constants",
    "//components/resources",
    "//content/public/common",
    "//third_party/widevine/cdm:buildflags",
  ]
}
