# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//express/components/brave_vpn/common/buildflags/buildflags.gni")
import("//express/components/speedreader/common/buildflags/buildflags.gni")
import("//build/config/features.gni")

source_set("renderer") {
  visibility = [
    "//express:child_dependencies",
    "//express/renderer/*",
    "//express/test:*",
    "//chrome/renderer/*",
  ]

  public_deps = [ "//chrome/renderer" ]

  deps = [
    "//express/components/brave_search/common",
    "//express/components/brave_search/renderer",
    "//express/components/brave_shields/common",
    "//express/components/brave_wallet/renderer",
    "//express/components/cosmetic_filters/renderer",
    "//express/renderer/brave_wallet/",
    "//v8",
  ]

  if (enable_speedreader) {
    deps += [ "//express/components/speedreader/renderer" ]
  }

  if (enable_brave_vpn && is_android) {
    deps += [ "//express/components/brave_vpn/renderer/android" ]
  }
}
